# controle-estoque-api

./: Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  payment_method.rs  product.rs  product_ticket.rs  stock.rs  stock_movimentation.rs  ticket.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250319_211110_create_user_table.rs  m20250323_232035_create_ticket_table.rs  m20250323_232218_create_product_table.rs  m20250323_233108_create_stock_table.rs  m20250323_233437_create_product_ticket_table.rs  m20250323_233726_create_stock_movimentation_table.rs  m20250329_125828_create_payment_method_table.rs
src/: database.rs  main.rs
src/controller/: mod.rs  payment_method_controller.rs  product_controller.rs  ticket_controller.rs  user_controller.rs
src/dao/: mod.rs  payment_method_dao.rs  product_dao.rs  product_ticket_dao.rs  stock_movimentation_dao.rs  ticket_dao.rs  user_dao.rs
src/model/: mod.rs  payment_method.rs  product_model.rs  ticket_model.rs  user_model.rs
src/response/: structs.rs
src/utils/: encryptor.rs  env.rs  errors.rs  mod.rs  time.rs
src/validation/: mod.rs  payment_method_validation.rs  product_validation.rs  structs.rs  ticket_validation.rs  user.rs  user_validation.rs
